@@ -10,11 +10,13 @@ import cn.nukkit.level.Location;
 import cn.nukkit.level.Position;
 import cn.nukkit.math.BVector3;
 import cn.nukkit.math.Vector3;
+import cn.nukkit.math.NukkitMath;
 import org.cloudburstmc.protocol.bedrock.data.AbilitiesIndex;
 import org.cloudburstmc.protocol.bedrock.data.command.CommandParamType;
 
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 /**
  * @author Pub4Game and milkice
@@ -102,23 +104,16 @@ public class TeleportCommand extends VanillaCommand {
                     return 0;
                 }
                 Location victim = sender.getLocation();
-                Location target = destination.get(0).setYaw(victim.getYaw()).setPitch(victim.getPitch());
-                boolean checkForBlocks = false;
-                if (list.hasResult(1)) {
-                    checkForBlocks = list.getResult(1);
+                Location target = destination.getFirst().setYaw(victim.getYaw()).setPitch(victim.getPitch());
+                boolean checkForBlocks = list.hasResult(1) ? list.getResult(1) : false;
+
+                if (isUnsafe(target, checkForBlocks)) {
+                    log.addError("commands.tp.safeTeleportFail", sender.asEntity().getName(), destination.getFirst().getName()).output();
+                    return 0;
                 }
-                if (checkForBlocks) {
-                    if (!target.getLevelBlock().isSolid() && !target.add(0, 1, 0).getLevelBlock().isSolid()) {
-                        sender.asEntity().teleport(target);
-                        log.addSuccess("commands.tp.successVictim", destination.get(0).getName()).output();
-                    } else {
-                        log.addError("commands.tp.safeTeleportFail", sender.asEntity().getName(), destination.get(0).getName()).output();
-                        return 0;
-                    }
-                } else {
-                    sender.asEntity().teleport(target);
-                    log.addSuccess("commands.tp.successVictim", destination.get(0).getName()).output();
-                }
+
+                sender.asEntity().teleport(target);
+                log.addSuccess("commands.tp.successVictim", destination.getFirst().getName()).output(true);
                 return 1;
             }
             case "Entity->Entity" -> {
@@ -136,32 +131,19 @@ public class TeleportCommand extends VanillaCommand {
                     log.addError("commands.generic.tooManyTargets").output();
                     return 0;
                 }
-                Entity target = destination.get(0);
-                boolean checkForBlocks = false;
-                if (list.hasResult(3)) {
-                    checkForBlocks = list.getResult(3);
+                Entity target = destination.getFirst();
+                boolean checkForBlocks = list.hasResult(2) ? list.getResult(2) : false;
+                String message = victims.stream().map(Entity::getName).collect(Collectors.joining(", "));
+
+                if (isUnsafe(target, checkForBlocks)) {
+                    log.addError("commands.tp.safeTeleportFail", message, target.getName()).output();
+                    return 0;
                 }
-                StringBuilder sb = new StringBuilder();
+
                 for (Entity victim : victims) {
-                    sb.append(victim.getName()).append(" ");
+                    victim.teleport(target.getLocation().setYaw(victim.getYaw()).setPitch(victim.getPitch()));
                 }
-                if (checkForBlocks) {
-                    if (!target.getLevelBlock().isSolid() && !target.add(0, 1, 0).getLevelBlock().isSolid()) {
-                        for (Entity victim : victims) {
-                            victim.teleport(target.getLocation().setYaw(victim.getYaw()).setPitch(victim.getPitch()));
-                        }
-                        log.addSuccess("commands.tp.success", sb.toString(), target.getName());
-                    } else {
-                        log.addError("commands.tp.safeTeleportFail ", sb.toString(), target.getName()).output();
-                        return 0;
-                    }
-                } else {
-                    for (Entity victim : victims) {
-                        victim.teleport(target.getLocation().setYaw(victim.getYaw()).setPitch(victim.getPitch()));
-                    }
-                    log.addSuccess("commands.tp.success", sb.toString(), target.getName());
-                }
-                log.output();
+                log.addSuccess("commands.tp.success", message, target.getName()).output(true);
                 return victims.size();
             }
             case "Entity->Pos" -> {
@@ -171,39 +153,22 @@ public class TeleportCommand extends VanillaCommand {
                     return 0;
                 }
                 Position pos = list.getResult(1);
-                double yRot = sender.getLocation().pitch;
-                if (list.hasResult(2)) {
-                    yRot = list.getResult(2);
-                }
-                double xRot = sender.getLocation().yaw;
-                if (list.hasResult(3)) {
-                    xRot = list.getResult(3);
-                }
-                boolean checkForBlocks = false;
-                if (list.hasResult(4)) {
-                    checkForBlocks = list.getResult(4);
-                }
-                StringBuilder sb = new StringBuilder();
-                for (Entity victim : victims) {
-                    sb.append(victim.getName()).append(" ");
-                }
+                double yRot = list.hasResult(2) ? list.getResult(2) : sender.getLocation().pitch;
+                double xRot = list.hasResult(3) ? list.getResult(3) : sender.getLocation().yaw;
+                boolean checkForBlocks = list.hasResult(4) ? list.getResult(4) : false;
+
+                String message = victims.stream().map(Entity::getName).collect(Collectors.joining(", "));
                 Location target = Location.fromObject(pos, pos.level, xRot, yRot);
-                if (checkForBlocks) {
-                    if (!target.getLevelBlock().isSolid() && !target.add(0, 1, 0).getLevelBlock().isSolid()) {
-                        for (Entity victim : victims) {
-                            victim.teleport(target);
-                        }
-                        log.addSuccess("commands.tp.success.coordinates", sb.toString(), String.valueOf(target.getFloorX()), String.valueOf(target.getFloorY()), String.valueOf(target.getFloorZ()));
-                    } else {
-                        log.addError("commands.tp.safeTeleportFail ", sb.toString(), target.toString()).output();
-                        return 0;
-                    }
-                } else {
-                    for (Entity victim : victims) {
-                        victim.teleport(target);
-                    }
-                    log.addSuccess("commands.tp.success.coordinates", sb.toString(), String.valueOf(target.getFloorX()), String.valueOf(target.getFloorY()), String.valueOf(target.getFloorZ()));
+
+                if (isUnsafe(target, checkForBlocks)) {
+                    log.addError("commands.tp.safeTeleportFail", message, NukkitMath.round(target.getX(), 2) + ", " + NukkitMath.round(target.getY(), 2) + ", " + NukkitMath.round(target.getZ(), 2)).output();
+                    return 0;
                 }
+
+                for (Entity victim : victims) {
+                    victim.teleport(target);
+                }
+                log.addSuccess("commands.tp.success.coordinates", message, String.valueOf(NukkitMath.round(target.getX(), 2)), String.valueOf(NukkitMath.round(target.getY(), 2)), String.valueOf(NukkitMath.round(target.getZ(), 2))).output(true);
                 return 1;
             }
             case "Entity->Pos(FacingPos)" -> {
@@ -214,33 +179,20 @@ public class TeleportCommand extends VanillaCommand {
                 }
                 Position pos = list.getResult(1);
                 Position lookAtPosition = list.getResult(3);
-                boolean checkForBlocks = false;
-                if (list.hasResult(4)) {
-                    checkForBlocks = list.getResult(4);
+                boolean checkForBlocks = list.hasResult(4) ? list.getResult(4) : false;
+
+                String message = victims.stream().map(Entity::getName).collect(Collectors.joining(", "));
+                Location target = getFacingLocation(pos, lookAtPosition);
+
+                if (isUnsafe(target, checkForBlocks)) {
+                    log.addError("commands.tp.safeTeleportFail", message, NukkitMath.round(target.getX(), 2) + ", " + NukkitMath.round(target.getY(), 2) + ", " + NukkitMath.round(target.getZ(), 2)).output();
+                    return 0;
                 }
-                StringBuilder sb = new StringBuilder();
+
                 for (Entity victim : victims) {
-                    sb.append(victim.getName()).append(" ");
+                    victim.teleport(target);
                 }
-                BVector3 bv = BVector3.fromPos(new Vector3(lookAtPosition.x - pos.x, lookAtPosition.y - pos.y, lookAtPosition.z - pos.z));
-                Location target = Location.fromObject(pos, pos.level, bv.getYaw(), bv.getPitch());
-                if (checkForBlocks) {
-                    if (!target.getLevelBlock().isSolid() && !target.add(0, 1, 0).getLevelBlock().isSolid()) {
-                        for (Entity victim : victims) {
-                            victim.teleport(target);
-                        }
-                        log.addSuccess("commands.tp.success.coordinates", sb.toString(), String.valueOf(target.getFloorX()), String.valueOf(target.getFloorY()), String.valueOf(target.getFloorZ()));
-                    } else {
-                        log.addError("commands.tp.safeTeleportFail ", sb.toString(), target.getFloorX() + " " + target.getFloorY() + " " + target.getFloorZ()).output();
-                        return 0;
-                    }
-                } else {
-                    for (Entity victim : victims) {
-                        victim.teleport(target);
-                    }
-                    log.addSuccess("commands.tp.success.coordinates", sb.toString(), String.valueOf(target.getFloorX()), String.valueOf(target.getFloorY()), String.valueOf(target.getFloorZ()));
-                }
-                log.output();
+                log.addSuccess("commands.tp.success.coordinates", message, String.valueOf(NukkitMath.round(target.getX(), 2)), String.valueOf(NukkitMath.round(target.getY(), 2)), String.valueOf(NukkitMath.round(target.getZ(), 2))).output(true);
                 return 1;
             }
             case "Entity->Pos(FacingEntity)" -> {
@@ -259,34 +211,21 @@ public class TeleportCommand extends VanillaCommand {
                     log.addTooManyTargets().output();
                     return 0;
                 }
-                Position lookAtPosition = lookAtEntity.get(0);
-                boolean checkForBlocks = false;
-                if (list.hasResult(4)) {
-                    checkForBlocks = list.getResult(4);
+                Position lookAtPosition = lookAtEntity.getFirst();
+                boolean checkForBlocks = list.hasResult(4) ? list.getResult(4) : false;
+
+                String message = victims.stream().map(Entity::getName).collect(Collectors.joining(", "));
+                Location target = getFacingLocation(pos, lookAtPosition);
+
+                if (isUnsafe(target, checkForBlocks)) {
+                    log.addError("commands.tp.safeTeleportFail", message, NukkitMath.round(target.getX(), 2) + ", " + NukkitMath.round(target.getY(), 2) + ", " + NukkitMath.round(target.getZ(), 2)).output();
+                    return 0;
                 }
-                StringBuilder sb = new StringBuilder();
+
                 for (Entity victim : victims) {
-                    sb.append(victim.getName()).append(" ");
+                    victim.teleport(target);
                 }
-                BVector3 bv = BVector3.fromPos(new Vector3(lookAtPosition.x - pos.x, lookAtPosition.y - pos.y, lookAtPosition.z - pos.z));
-                Location target = Location.fromObject(pos, pos.level, bv.getYaw(), bv.getPitch());
-                if (checkForBlocks) {
-                    if (!target.getLevelBlock().isSolid() && !target.add(0, 1, 0).getLevelBlock().isSolid()) {
-                        for (Entity victim : victims) {
-                            victim.teleport(target);
-                        }
-                        log.addSuccess("commands.tp.success.coordinates", sb.toString(), String.valueOf(target.getFloorX()), String.valueOf(target.getFloorY()), String.valueOf(target.getFloorZ()));
-                    } else {
-                        log.addError("commands.tp.safeTeleportFail ", sb.toString(), target.toString()).output();
-                        return 0;
-                    }
-                } else {
-                    for (Entity victim : victims) {
-                        victim.teleport(target);
-                    }
-                    log.addSuccess("commands.tp.success.coordinates", sb.toString(), String.valueOf(target.getFloorX()), String.valueOf(target.getFloorY()), String.valueOf(target.getFloorZ()));
-                }
-                log.output();
+                log.addSuccess("commands.tp.success.coordinates", message, String.valueOf(NukkitMath.round(target.getX(), 2)), String.valueOf(NukkitMath.round(target.getY(), 2)), String.valueOf(NukkitMath.round(target.getZ(), 2))).output(true);
                 return 1;
             }
             case "->Pos" -> {
@@ -295,32 +234,18 @@ public class TeleportCommand extends VanillaCommand {
                     return 0;
                 }
                 Position pos = list.getResult(0);
-                double yRot = sender.getLocation().pitch;
-                if (list.hasResult(1)) {
-                    yRot = list.getResult(1);
-                }
-                double xRot = sender.getLocation().yaw;
-                if (list.hasResult(2)) {
-                    xRot = list.getResult(2);
-                }
-                boolean checkForBlocks = false;
-                if (list.hasResult(3)) {
-                    checkForBlocks = list.getResult(3);
-                }
+                double yRot = list.hasResult(1) ? list.getResult(1) : sender.getLocation().pitch;
+                double xRot = list.hasResult(2) ? list.getResult(2) : sender.getLocation().yaw;
+                boolean checkForBlocks = list.hasResult(3) ? list.getResult(3) : false;
+
                 Location target = Location.fromObject(pos, pos.level, xRot, yRot);
-                if (checkForBlocks) {
-                    if (!target.getLevelBlock().isSolid() && !target.add(0, 1, 0).getLevelBlock().isSolid()) {
-                        sender.asEntity().teleport(target);
-                        log.addSuccess("commands.tp.success.coordinates", sender.getName(), String.valueOf(target.getFloorX()), String.valueOf(target.getFloorY()), String.valueOf(target.getFloorZ()));
-                    } else {
-                        log.addError("commands.tp.safeTeleportFail ", sender.getName(), target.toString()).output();
-                        return 0;
-                    }
-                } else {
-                    sender.asEntity().teleport(target);
-                    log.addSuccess("commands.tp.success.coordinates", sender.getName(), String.valueOf(target.getFloorX()), String.valueOf(target.getFloorY()), String.valueOf(target.getFloorZ()));
+                if (isUnsafe(target, checkForBlocks)) {
+                    log.addError("commands.tp.safeTeleportFail", sender.getName(), NukkitMath.round(target.getX(), 2) + ", " + NukkitMath.round(target.getY(), 2) + ", " + NukkitMath.round(target.getZ(), 2)).output();
+                    return 0;
                 }
-                log.output();
+
+                sender.asEntity().teleport(target);
+                log.addSuccess("commands.tp.success.coordinates", sender.getName(), String.valueOf(NukkitMath.round(target.getX(), 2)), String.valueOf(NukkitMath.round(target.getY(), 2)), String.valueOf(NukkitMath.round(target.getZ(), 2))).output(true);
                 return 1;
             }
             case "->Pos(FacingPos)" -> {
@@ -330,25 +255,16 @@ public class TeleportCommand extends VanillaCommand {
                 }
                 Position pos = list.getResult(0);
                 Position lookAtPosition = list.getResult(2);
-                boolean checkForBlocks = false;
-                if (list.hasResult(3)) {
-                    checkForBlocks = list.getResult(3);
+                boolean checkForBlocks = list.hasResult(3) ? list.getResult(3) : false;
+
+                Location target = getFacingLocation(pos, lookAtPosition);
+                if (isUnsafe(target, checkForBlocks)) {
+                    log.addError("commands.tp.safeTeleportFail", sender.asEntity().getName(), NukkitMath.round(target.getX(), 2) + ", " + NukkitMath.round(target.getY(), 2) + ", " + NukkitMath.round(target.getZ(), 2)).output();
+                    return 0;
                 }
-                BVector3 bv = BVector3.fromPos(new Vector3(lookAtPosition.x - pos.x, lookAtPosition.y - pos.y, lookAtPosition.z - pos.z));
-                Location target = Location.fromObject(pos, pos.level, bv.getYaw(), bv.getPitch());
-                if (checkForBlocks) {
-                    if (!target.getLevelBlock().isSolid() && !target.add(0, 1, 0).getLevelBlock().isSolid()) {
-                        sender.asEntity().teleport(target);
-                        log.addSuccess("commands.tp.success.coordinates", sender.asEntity().getName(), String.valueOf(target.getFloorX()), String.valueOf(target.getFloorY()), String.valueOf(target.getFloorZ()));
-                    } else {
-                        log.addError("commands.tp.safeTeleportFail ", sender.asEntity().getName(), target.toString()).output();
-                        return 0;
-                    }
-                } else {
-                    sender.asEntity().teleport(target);
-                    log.addSuccess("commands.tp.success.coordinates", sender.asEntity().getName(), String.valueOf(target.getFloorX()), String.valueOf(target.getFloorY()), String.valueOf(target.getFloorZ()));
-                }
-                log.output();
+
+                sender.asEntity().teleport(target);
+                log.addSuccess("commands.tp.success.coordinates", sender.asEntity().getName(), String.valueOf(NukkitMath.round(target.getX(), 2)), String.valueOf(NukkitMath.round(target.getY(), 2)), String.valueOf(NukkitMath.round(target.getZ(), 2))).output(true);
                 return 1;
             }
             case "->Pos(FacingEntity)" -> {
@@ -366,31 +282,31 @@ public class TeleportCommand extends VanillaCommand {
                     log.addTooManyTargets().output();
                     return 0;
                 }
-                Position lookAtPosition = lookAtEntity.get(0);
-                boolean checkForBlocks = false;
-                if (list.hasResult(3)) {
-                    checkForBlocks = list.getResult(3);
+                Position lookAtPosition = lookAtEntity.getFirst();
+                boolean checkForBlocks = list.hasResult(3) ? list.getResult(3) : false;
+
+                Location target = getFacingLocation(pos, lookAtPosition);
+                if (isUnsafe(target, checkForBlocks)) {
+                    log.addError("commands.tp.safeTeleportFail", sender.asEntity().getName(), NukkitMath.round(target.getX(), 2) + ", " + NukkitMath.round(target.getY(), 2) + ", " + NukkitMath.round(target.getZ(), 2)).output();
+                    return 0;
                 }
-                BVector3 bv = BVector3.fromPos(new Vector3(lookAtPosition.x - pos.x, lookAtPosition.y - pos.y, lookAtPosition.z - pos.z));
-                Location target = Location.fromObject(pos, pos.level, bv.getYaw(), bv.getPitch());
-                if (checkForBlocks) {
-                    if (!target.getLevelBlock().isSolid() && !target.add(0, 1, 0).getLevelBlock().isSolid()) {
-                        sender.asEntity().teleport(target);
-                        log.addSuccess("commands.tp.success.coordinates", sender.asEntity().getName(), String.valueOf(target.getFloorX()), String.valueOf(target.getFloorY()), String.valueOf(target.getFloorZ()));
-                    } else {
-                        log.addError("commands.tp.safeTeleportFail", sender.asEntity().getName(), target.toString()).output();
-                        return 0;
-                    }
-                } else {
-                    sender.asEntity().teleport(target);
-                    log.addSuccess("commands.tp.success.coordinates", sender.asEntity().getName(), String.valueOf(target.getFloorX()), String.valueOf(target.getFloorY()), String.valueOf(target.getFloorZ()));
-                }
-                log.output();
+
+                sender.asEntity().teleport(target);
+                log.addSuccess("commands.tp.success.coordinates", sender.asEntity().getName(), String.valueOf(NukkitMath.round(target.getX(), 2)), String.valueOf(NukkitMath.round(target.getY(), 2)), String.valueOf(NukkitMath.round(target.getZ(), 2))).output(true);
                 return 1;
             }
             default -> {
                 return 0;
             }
         }
+    }
+
+    private boolean isUnsafe(Position target, boolean checkForBlocks) {
+        return checkForBlocks && (target.getLevelBlock().isSolid() || target.add(0, 1, 0).getLevelBlock().isSolid());
+    }
+
+    private Location getFacingLocation(Position pos, Position lookAtPosition) {
+        BVector3 bv = BVector3.fromPos(new Vector3(lookAtPosition.x - pos.x, lookAtPosition.y - pos.y, lookAtPosition.z - pos.z));
+        return Location.fromObject(pos, pos.level, bv.getYaw(), bv.getPitch());
     }
 }
